@@ -6,6 +6,8 @@
     /etc/passwd and /etc/group only.
   * sv.c: properly wait for a service to be restarted on 'restart';
     support checks through -v for pause, cont, kill.
+  * doc/runscripts.html: add contributed run scripts (thx Kevin, marlowe,
+    ed neville, xavier dutoit).
 
 1.7.0
 Sat, 07 Oct 2006 18:24:17 +0000
